Spring boot 4 (#2)
* gcode decoding refactoring

* gcode decoding refactoring fix tests

* kotlin added

* aware gcode parser

* frontend build pipeline

* added GTokenizer.kt for strict GCode

* added GTokenizer.kt iterator implementation

* added GTokenizer.kt few tests

* added GLineReader.kt stub

* minor changes

* introduced G.kt

* app started

* app working on liquibase integration

---------

Co-authored-by: strunov <sergey.trunov@dataart.com>
Co-authored-by: strunov <strunov@ncl.com>