@@ -5,8 +5,15 @@ plugins {
 group = 'org.qw3rtrun.p3d'
 version = '0.0.1-SNAPSHOT'
 
-sourceCompatibility = JavaVersion.VERSION_21
-targetCompatibility = JavaVersion.VERSION_21
+ext {
+    springModulithVersion = "2.0.1"
+}
+
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of("25")
+    }
+}
 
 repositories {
     mavenCentral()
@@ -18,22 +25,14 @@ configurations {
     }
 }
 
-compileJava {
-    options.compilerArgs += ['--enable-preview']
-}
-
-tasks.withType(JavaExec) { jvmArgs += '--enable-preview' }
-
 dependencies {
-    implementation 'org.apache.commons:commons-lang3:3.12.0'
-    //testImplementation "junit:junit:4.13"
-}
-
-compileTestJava {
-    options.compilerArgs += ['--enable-preview']
+    implementation 'org.apache.commons:commons-lang3:3.20.0'
+    testImplementation 'org.junit.jupiter:junit-jupiter'
+    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
 tasks.named('test') {
-    jvmArgs += '--enable-preview'
     useJUnitPlatform()
 }
+
+
